--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
 <body>
 
 	    <!-- Add modal to the game.-->
-    <div class='modal_overlay hide' id='modal_overlay'>
+    <div class='modal_overlay hide show' id='modal_overlay'>
         <div class='modal_content' id='modal_content'>
             <div class='modal_heading'>
-                <h1 class='modal_title'>Game Over!</h1>
-                <span class='modal_close'>x</span>
+                <h1 class='modal_title' id="modal_title">Game Over!</h1>
             </div>
-            <!-- A paragraph for win/lost message.-->
+
             <p id="won">!!!! Congrats,Your Won !!!!</p>
-            
+
             <div class='modal_buttons'>
                 <button class='modal_button modal_replay'>Replay</button>
             </div>
         </div>
     </div>
-	
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
